Commit Changes: [add] Styles to the components [add] Practice with the class names

--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -11,9 +11,11 @@
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <title>Challeng 2 -> Built in components</title>
+    <link rel="stylesheet" href="static/css/global.css" />
   </head>
   <body>
     <div id="root"></div>
     <script src="./index.js" type="text/babel"></script>
+    <style s></style>
   </body>
 </html>
